--- a/tex/p030.tex
+++ b/tex/p030.tex
@@ -10,10 +10,13 @@
 \vs p030 1:1 Living beings are classified on Paradise in accordance with inherent and attained relationship to the Paradise Deities. During the grand gatherings of the central and superuniverses those present are often grouped in accordance with origin: those of triune origin, or of Trinity attainment; those of dual origin; and those of single origin. It is difficult to interpret the Paradise classification of living beings to the mortal mind, but we are authorized to present the following:
 \vs p030 1:2 \ublistelem{I.}\bibnobreakspace \bibemph{TRIUNE\hyp{}ORIGIN BEINGS.} Beings created by all three Paradise Deities, either as such or as the Trinity, together with the Trinitized Corps, which designation refers to all groups of trinitized beings, revealed and unrevealed.
 \vs p030 1:3 \ublistelem{A.}\bibnobreakspace \bibemph{The Supreme Spirits.}
+\begin{quote}
 \vs p030 1:4 \ublistelem{1.}\bibnobreakspace The Seven Master Spirits.
 \vs p030 1:5 \ublistelem{2.}\bibnobreakspace The Seven Supreme Executives.
 \vs p030 1:6 \ublistelem{3.}\bibnobreakspace The Seven Orders of Reflective Spirits.
+\end{quote}
 \vs p030 1:7 \ublistelem{B.}\bibnobreakspace \bibemph{The Stationary Sons of the Trinity.}
+\begin{quote}
 \vs p030 1:8 \ublistelem{1.}\bibnobreakspace Trinitized Secrets of Supremacy.
 \vs p030 1:9 \ublistelem{2.}\bibnobreakspace Eternals of Days.
 \vs p030 1:10 \ublistelem{3.}\bibnobreakspace Ancients of Days.
@@ -24,7 +27,9 @@
 \vs p030 1:15 \ublistelem{8.}\bibnobreakspace Perfectors of Wisdom.
 \vs p030 1:16 \ublistelem{9.}\bibnobreakspace Divine Counsellors.
 \vs p030 1:17 \ublistelem{10.}\bibnobreakspace Universal Censors.
+\end{quote}
 \vs p030 1:18 \ublistelem{C.}\bibnobreakspace \bibemph{Trinity\hyp{}origin and Trinitized Beings.}
+\begin{quote}
 \vs p030 1:19 \ublistelem{1.}\bibnobreakspace Trinity Teacher Sons.
 \vs p030 1:20 \ublistelem{2.}\bibnobreakspace Inspired Trinity Spirits.
 \vs p030 1:21 \ublistelem{3.}\bibnobreakspace Havona Natives.
@@ -35,8 +40,10 @@
 \vs p030 1:26 \ublistelem{8.}\bibnobreakspace Trinitized Sons of Selection.
 \vs p030 1:27 \ublistelem{9.}\bibnobreakspace Trinitized Sons of Perfection.
 \vs p030 1:28 \ublistelem{10.}\bibnobreakspace Creature\hyp{}trinitized Sons.
+\end{quote}
 \vs p030 1:29 \ublistelem{II.}\bibnobreakspace \bibemph{DUAL\hyp{}ORIGIN BEINGS.} Those of origin in any two of the Paradise Deities or otherwise created by any two beings of direct or indirect descent from the Paradise Deities.
 \vs p030 1:30 \ublistelem{A.}\bibnobreakspace \bibemph{The Descending Orders.}
+\begin{quote}
 \vs p030 1:31 \ublistelem{1.}\bibnobreakspace Creator Sons.
 \vs p030 1:32 \ublistelem{2.}\bibnobreakspace Magisterial Sons.
 \vs p030 1:33 \ublistelem{3.}\bibnobreakspace Bright and Morning Stars.
@@ -49,20 +56,26 @@
 \vs p030 1:40 \ublistelem{10.}\bibnobreakspace Life Carriers.
 \vs p030 1:41 \ublistelem{11.}\bibnobreakspace Unrevealed Universe Aids.
 \vs p030 1:42 \ublistelem{12.}\bibnobreakspace Unrevealed Sons of God.
+\end{quote}
 \vs p030 1:43 \ublistelem{B.}\bibnobreakspace \bibemph{The Stationary Orders.}
+\begin{quote}
 \vs p030 1:44 \ublistelem{1.}\bibnobreakspace Abandonters.
 \vs p030 1:45 \ublistelem{2.}\bibnobreakspace Susatia.
 \vs p030 1:46 \ublistelem{3.}\bibnobreakspace Univitatia.
 \vs p030 1:47 \ublistelem{4.}\bibnobreakspace Spironga.
 \vs p030 1:48 \ublistelem{5.}\bibnobreakspace Unrevealed Dual\hyp{}origin Beings.
+\end{quote}
 \vs p030 1:49 \ublistelem{C.}\bibnobreakspace \bibemph{The Ascending Orders.}
+\begin{quote}
 \vs p030 1:50 \ublistelem{1.}\bibnobreakspace Adjuster\hyp{}fused Mortals.
 \vs p030 1:51 \ublistelem{2.}\bibnobreakspace Son\hyp{}fused Mortals.
 \vs p030 1:52 \ublistelem{3.}\bibnobreakspace Spirit\hyp{}fused Mortals.
 \vs p030 1:53 \ublistelem{4.}\bibnobreakspace Translated Midwayers.
 \vs p030 1:54 \ublistelem{5.}\bibnobreakspace Unrevealed Ascenders.
+\end{quote}
 \vs p030 1:55 \ublistelem{III.}\bibnobreakspace \bibemph{SINGLE\hyp{}ORIGIN BEINGS.} Those of origin in any one of the Paradise Deities or otherwise created by any one being of direct or indirect descent from the Paradise Deities.
 \vs p030 1:56 \ublistelem{A.}\bibnobreakspace \bibemph{The Supreme Spirits.}
+\begin{quote}
 \vs p030 1:57 \ublistelem{1.}\bibnobreakspace Gravity Messengers.
 \vs p030 1:58 \ublistelem{2.}\bibnobreakspace The Seven Spirits of the Havona Circuits.
 \vs p030 1:59 \ublistelem{3.}\bibnobreakspace The Twelvefold Adjutants of the Havona Circuits.
@@ -70,13 +83,17 @@
 \vs p030 1:61 \ublistelem{5.}\bibnobreakspace Universe Mother Spirits.
 \vs p030 1:62 \ublistelem{6.}\bibnobreakspace The Sevenfold Adjutant Mind\hyp{}Spirits.
 \vs p030 1:63 \ublistelem{7.}\bibnobreakspace Unrevealed Deity\hyp{}origin Beings.
+\end{quote}
 \vs p030 1:64 \ublistelem{B.}\bibnobreakspace \bibemph{The Ascending Orders.}
+\begin{quote}
 \vs p030 1:65 \ublistelem{1.}\bibnobreakspace Personalized Adjusters.
 \vs p030 1:66 \ublistelem{2.}\bibnobreakspace Ascending Material Sons.
 \vs p030 1:67 \ublistelem{3.}\bibnobreakspace Evolutionary Seraphim.
 \vs p030 1:68 \ublistelem{4.}\bibnobreakspace Evolutionary Cherubim.
 \vs p030 1:69 \ublistelem{5.}\bibnobreakspace Unrevealed Ascenders.
+\end{quote}
 \vs p030 1:70 \ublistelem{C.}\bibnobreakspace \bibemph{The Family of the Infinite Spirit.}
+\begin{quote}
 \vs p030 1:71 \ublistelem{1.}\bibnobreakspace Solitary Messengers.
 \vs p030 1:72 \ublistelem{2.}\bibnobreakspace Universe Circuit Supervisors.
 \vs p030 1:73 \ublistelem{3.}\bibnobreakspace Census Directors.
@@ -98,6 +115,7 @@
 \vs p030 1:89 \ublistelem{19.}\bibnobreakspace The Supreme Power Centres.
 \vs p030 1:90 \ublistelem{20.}\bibnobreakspace The Master Physical Controllers.
 \vs p030 1:91 \ublistelem{21.}\bibnobreakspace The Morontia Power Supervisors.
+\end{quote}
 \vs p030 1:92 \ublistelem{IV.}\bibnobreakspace\tunemarkup{pgkoboaurahd}{\kern-5pt} \bibemph{EVENTUATED TRANSCENDENTAL BEINGS.} There is to be found on Paradise a vast host of transcendental beings whose origin is not ordinarily disclosed to the universes of time and space until they are settled in light and life. These Transcendentalers are neither creators nor creatures; they are the \bibemph{eventuated} children of divinity, ultimacy, and eternity. These “eventuators” are neither finite nor infinite --- they are \bibemph{absonite;} and absonity is neither infinity nor absoluteness.
 \vs p030 1:93 These uncreated noncreators are ever loyal to the Paradise Trinity and obedient to the Ultimate. They are existent on four ultimate levels of personality activity and are functional on the seven levels of the absonite in twelve grand divisions consisting of one thousand major working groups of seven classes each. These eventuated beings include the following orders:
 \vs p030 1:94 \ublistelem{1.}\bibnobreakspace The Architects of the Master Universe.
@@ -132,10 +150,13 @@
 \vs p030 2:8 \ublistelem{7.}\bibnobreakspace The Corps of Permanent Citizenship.
 \vs p030 2:9 \pc These groups of will creatures are divided into numerous classes and minor subdivisions. The presentation of this classification of the personalities of the grand universe is however chiefly concerned in setting forth those orders of intelligent beings who have been revealed in these narratives, most of whom will be encountered in the ascendant experience of the mortals of time on their progressive climb to Paradise. The following listings make no mention of vast orders of universe beings who carry forward their work apart from the mortal ascension scheme.
 \vs p030 2:10 \ublistelem{I.}\bibnobreakspace \bibemph{THE PARADISE DEITIES.}
+\begin{quote}
 \vs p030 2:11 \ublistelem{1.}\bibnobreakspace The Universal Father.
 \vs p030 2:12 \ublistelem{2.}\bibnobreakspace The Eternal Son.
 \vs p030 2:13 \ublistelem{3.}\bibnobreakspace The Infinite Spirit.
+\end{quote}
 \vs p030 2:14 \ublistelem{II.}\bibnobreakspace \bibemph{THE SUPREME SPIRITS.}
+\begin{quote}
 \vs p030 2:15 \ublistelem{1.}\bibnobreakspace The Seven Master Spirits.
 \vs p030 2:16 \ublistelem{2.}\bibnobreakspace The Seven Supreme Executives.
 \vs p030 2:17 \ublistelem{3.}\bibnobreakspace The Seven Groups of Reflective Spirits.
@@ -143,7 +164,9 @@
 \vs p030 2:19 \ublistelem{5.}\bibnobreakspace The Seven Spirits of the Circuits.
 \vs p030 2:20 \ublistelem{6.}\bibnobreakspace Local Universe Creative Spirits.
 \vs p030 2:21 \ublistelem{7.}\bibnobreakspace Adjutant Mind\hyp{}Spirits.
+\end{quote}
 \vs p030 2:22 \ublistelem{III.}\bibnobreakspace \bibemph{THE TRINITY\hyp{}ORIGIN BEINGS.}
+\begin{quote}
 \vs p030 2:23 \ublistelem{1.}\bibnobreakspace Trinitized Secrets of Supremacy.
 \vs p030 2:24 \ublistelem{2.}\bibnobreakspace Eternals of Days.
 \vs p030 2:25 \ublistelem{3.}\bibnobreakspace Ancients of Days.
@@ -158,8 +181,10 @@
 \vs p030 2:34 \ublistelem{12.}\bibnobreakspace Inspired Trinity Spirits.
 \vs p030 2:35 \ublistelem{13.}\bibnobreakspace Havona Natives.
 \vs p030 2:36 \ublistelem{14.}\bibnobreakspace Paradise Citizens.
+\end{quote}
 \vs p030 2:37 \ublistelem{IV.}\bibnobreakspace \bibemph{THE SONS OF GOD.}
 \vs p030 2:38 \ublistelem{A.}\bibnobreakspace \bibemph{Descending Sons.}
+\begin{quote}
 \vs p030 2:39 \ublistelem{1.}\bibnobreakspace Creator Sons --- Michaels.
 \vs p030 2:40 \ublistelem{2.}\bibnobreakspace Magisterial Sons --- Avonals.
 \vs p030 2:41 \ublistelem{3.}\bibnobreakspace Trinity Teacher Sons --- Daynals.
@@ -167,7 +192,9 @@
 \vs p030 2:43 \ublistelem{5.}\bibnobreakspace Vorondadek Sons.
 \vs p030 2:44 \ublistelem{6.}\bibnobreakspace Lanonandek Sons.
 \vs p030 2:45 \ublistelem{7.}\bibnobreakspace Life Carrier Sons.
+\end{quote}
 \vs p030 2:46 \ublistelem{B.}\bibnobreakspace \bibemph{Ascending Sons.}
+\begin{quote}
 \vs p030 2:47 \ublistelem{1.}\bibnobreakspace Father\hyp{}fused Mortals.
 \vs p030 2:48 \ublistelem{2.}\bibnobreakspace Son\hyp{}fused Mortals.
 \vs p030 2:49 \ublistelem{3.}\bibnobreakspace Spirit\hyp{}fused Mortals.
@@ -175,7 +202,9 @@
 \vs p030 2:51 \ublistelem{5.}\bibnobreakspace Ascending Material Sons.
 \vs p030 2:52 \ublistelem{6.}\bibnobreakspace Translated Midwayers.
 \vs p030 2:53 \ublistelem{7.}\bibnobreakspace Personalized Adjusters.
+\end{quote}
 \vs p030 2:54 \ublistelem{C.}\bibnobreakspace \bibemph{Trinitized Sons.}
+\begin{quote}
 \vs p030 2:55 \ublistelem{1.}\bibnobreakspace Mighty Messengers.
 \vs p030 2:56 \ublistelem{2.}\bibnobreakspace Those High in Authority.
 \vs p030 2:57 \ublistelem{3.}\bibnobreakspace Those without Name and Number.
@@ -185,9 +214,11 @@
 \vs p030 2:61 \ublistelem{7.}\bibnobreakspace High Son Assistants.
 \vs p030 2:62 \ublistelem{8.}\bibnobreakspace Ascender\hyp{}trinitized Sons.
 \vs p030 2:63 \ublistelem{9.}\bibnobreakspace Paradise\hyp{}Havona\hyp{}trinitized Sons.
+\end{quote}
 \vs p030 2:64 \ublistelem{10.}\bibnobreakspace Trinitized Sons of Destiny.
 \vs p030 2:65 \ublistelem{V.}\bibnobreakspace\tunemarkup{pgkoboaurahd}{\kern-5pt} \bibemph{PERSONALITIES OF THE INFINITE SPIRIT.}
 \vs p030 2:66 \ublistelem{A.}\bibnobreakspace \bibemph{Higher Personalities of the Infinite Spirit.}
+\begin{quote}
 \vs p030 2:67 \ublistelem{1.}\bibnobreakspace Solitary Messengers.
 \vs p030 2:68 \ublistelem{2.}\bibnobreakspace Universe Circuit Supervisors.
 \vs p030 2:69 \ublistelem{3.}\bibnobreakspace Census Directors.
@@ -195,7 +226,9 @@
 \vs p030 2:71 \ublistelem{5.}\bibnobreakspace Associate Inspectors.
 \vs p030 2:72 \ublistelem{6.}\bibnobreakspace Assigned Sentinels.
 \vs p030 2:73 \ublistelem{7.}\bibnobreakspace Graduate Guides.
+\end{quote}
 \vs p030 2:74 \ublistelem{B.}\bibnobreakspace \bibemph{The Messenger Hosts of Space.}
+\begin{quote}
 \vs p030 2:75 \ublistelem{1.}\bibnobreakspace Havona Servitals.
 \vs p030 2:76 \ublistelem{2.}\bibnobreakspace Universal Conciliators.
 \vs p030 2:77 \ublistelem{3.}\bibnobreakspace Technical Advisers.
@@ -203,7 +236,9 @@
 \vs p030 2:79 \ublistelem{5.}\bibnobreakspace Celestial Recorders.
 \vs p030 2:80 \ublistelem{6.}\bibnobreakspace Morontia Companions.
 \vs p030 2:81 \ublistelem{7.}\bibnobreakspace Paradise Companions.
+\end{quote}
 \vs p030 2:82 \ublistelem{C.}\bibnobreakspace \bibemph{The Ministering Spirits.}
+\begin{quote}
 \vs p030 2:83 \ublistelem{1.}\bibnobreakspace Supernaphim.
 \vs p030 2:84 \ublistelem{2.}\bibnobreakspace Seconaphim.
 \vs p030 2:85 \ublistelem{3.}\bibnobreakspace Tertiaphim.
@@ -211,9 +246,11 @@
 \vs p030 2:87 \ublistelem{5.}\bibnobreakspace Seraphim.
 \vs p030 2:88 \ublistelem{6.}\bibnobreakspace Cherubim and Sanobim.
 \vs p030 2:89 \ublistelem{7.}\bibnobreakspace Midwayers.
+\end{quote}
 \vs p030 2:90 \ublistelem{VI.}\bibnobreakspace \bibemph{THE UNIVERSE POWER DIRECTORS.}
 \vs p030 2:91 \ublistelem{A.}\bibnobreakspace \bibemph{The Seven Supreme Power Directors.}
 \vs p030 2:92 \ublistelem{B.}\bibnobreakspace \bibemph{Supreme Power Centres.}
+\begin{quote}
 \vs p030 2:93 \ublistelem{1.}\bibnobreakspace Supreme Centre Supervisors.
 \vs p030 2:94 \ublistelem{2.}\bibnobreakspace Havona Centres.
 \vs p030 2:95 \ublistelem{3.}\bibnobreakspace Superuniverse Centres.
@@ -221,7 +258,9 @@
 \vs p030 2:97 \ublistelem{5.}\bibnobreakspace Constellation Centres.
 \vs p030 2:98 \ublistelem{6.}\bibnobreakspace System Centres.
 \vs p030 2:99 \ublistelem{7.}\bibnobreakspace Unclassified Centres.
+\end{quote}
 \vs p030 2:100 \ublistelem{C.}\bibnobreakspace \bibemph{Master Physical Controllers.}
+\begin{quote}
 \vs p030 2:101 \ublistelem{1.}\bibnobreakspace Associate Power Directors.
 \vs p030 2:102 \ublistelem{2.}\bibnobreakspace Mechanical Controllers.
 \vs p030 2:103 \ublistelem{3.}\bibnobreakspace Energy Transformers.
@@ -229,7 +268,9 @@
 \vs p030 2:105 \ublistelem{5.}\bibnobreakspace Primary Associators.
 \vs p030 2:106 \ublistelem{6.}\bibnobreakspace Secondary Dissociators.
 \vs p030 2:107 \ublistelem{7.}\bibnobreakspace Frandalanks and Chronoldeks.
+\end{quote}
 \vs p030 2:108 \ublistelem{D.}\bibnobreakspace \bibemph{Morontia Power Supervisors.}
+\begin{quote}
 \vs p030 2:109 \ublistelem{1.}\bibnobreakspace Circuit Regulators.
 \vs p030 2:110 \ublistelem{2.}\bibnobreakspace System Co\hyp{}ordinators.
 \vs p030 2:111 \ublistelem{3.}\bibnobreakspace Planetary Custodians.
@@ -237,7 +278,9 @@
 \vs p030 2:113 \ublistelem{5.}\bibnobreakspace Liaison Stabilizers.
 \vs p030 2:114 \ublistelem{6.}\bibnobreakspace Selective Assorters.
 \vs p030 2:115 \ublistelem{7.}\bibnobreakspace Associate Registrars.
+\end{quote}
 \vs p030 2:116 \ublistelem{VII.}\bibnobreakspace \bibemph{THE CORPS OF PERMANENT CITIZENSHIP.}
+\begin{quote}
 \vs p030 2:117 \ublistelem{1.}\bibnobreakspace The Planetary Midwayers.
 \vs p030 2:118 \ublistelem{2.}\bibnobreakspace The Adamic Sons of the Systems.
 \vs p030 2:119 \ublistelem{3.}\bibnobreakspace The Constellation Univitatia.
@@ -250,9 +293,11 @@
 \vs p030 2:126 \ublistelem{10.}\bibnobreakspace Natives of the Father’s Paradise Spheres.
 \vs p030 2:127 \ublistelem{11.}\bibnobreakspace The Created Citizens of Paradise.
 \vs p030 2:128 \ublistelem{12.}\bibnobreakspace Adjuster\hyp{}fused Mortal Citizens of Paradise.
+\end{quote}
 \vs p030 2:129 \pc This is the working classification of the personalities of the universes as they are of record on the headquarters world of Uversa.
 \vs p030 2:130 \pc \tunemarkup{pgkoboaurahd}{\kern-4pt} \bibemph{COMPOSITE PERSONALITY GROUPS.}\tunemarkup{pgauraone}{\linebreak} There are on Uversa the records of numerous additional groups of intelligent beings, beings that are also closely related to the organization and administration of the grand universe. Among such orders are the following three composite personality groups:
 \vs p030 2:131 \ublistelem{A.}\bibnobreakspace \bibemph{The Paradise Corps of the Finality.}
+\begin{quote}
 \vs p030 2:132 \ublistelem{1.}\bibnobreakspace The Corps of Mortal Finaliters.
 \vs p030 2:133 \ublistelem{2.}\bibnobreakspace The Corps of Paradise Finaliters.
 \vs p030 2:134 \ublistelem{3.}\bibnobreakspace The Corps of Trinitized Finaliters.
@@ -260,8 +305,10 @@
 \vs p030 2:136 \ublistelem{5.}\bibnobreakspace The Corps of Havona Finaliters.
 \vs p030 2:137 \ublistelem{6.}\bibnobreakspace The Corps of Transcendental Finaliters.
 \vs p030 2:138 \ublistelem{7.}\bibnobreakspace The Corps of Unrevealed Sons of Destiny.
+\end{quote}
 \vs p030 2:139 \pc The Mortal Corps of the Finality is dealt with in the next and final paper of this series.
 \vs p030 2:140 \ublistelem{B.}\bibnobreakspace \bibemph{The Universe Aids.}
+\begin{quote}
 \vs p030 2:141 \ublistelem{1.}\bibnobreakspace Bright and Morning Stars.
 \vs p030 2:142 \ublistelem{2.}\bibnobreakspace Brilliant Evening Stars.
 \vs p030 2:143 \ublistelem{3.}\bibnobreakspace Archangels.
@@ -269,8 +316,10 @@
 \vs p030 2:145 \ublistelem{5.}\bibnobreakspace High Commissioners.
 \vs p030 2:146 \ublistelem{6.}\bibnobreakspace Celestial Overseers.
 \vs p030 2:147 \ublistelem{7.}\bibnobreakspace Mansion World Teachers.
+\end{quote}
 \vs p030 2:148 \pc On all headquarters worlds of both local and superuniverses, provision is made for these beings who are engaged in specific missions for the Creator Sons, the local universe rulers. We welcome these \bibemph{Universe Aids} on Uversa, but we have no jurisdiction over them. Such emissaries prosecute their work and carry on their observations under authority of the Creator Sons. Their activities are more fully described in the narrative of your local universe.
 \vs p030 2:149 \ublistelem{C.}\bibnobreakspace \bibemph{The Seven Courtesy Colonies.}
+\begin{quote}
 \vs p030 2:150 \ublistelem{1.}\bibnobreakspace Star Students.
 \vs p030 2:151 \ublistelem{2.}\bibnobreakspace Celestial Artisans.
 \vs p030 2:152 \ublistelem{3.}\bibnobreakspace Reversion Directors.
@@ -278,6 +327,7 @@
 \vs p030 2:154 \ublistelem{5.}\bibnobreakspace The Various Reserve Corps.
 \vs p030 2:155 \ublistelem{6.}\bibnobreakspace Student Visitors.
 \vs p030 2:156 \ublistelem{7.}\bibnobreakspace Ascending Pilgrims.
+\end{quote}
 \vs p030 2:157 \pc These seven groups of beings will be found thus organized and governed on all headquarters worlds from the local systems up to the capitals of the superuniverses, particularly the latter. The capitals of the seven superuniverses are the meeting places for almost all classes and orders of intelligent beings. With the exception of numerous groups of Paradise\hyp{}Havoners, here the will creatures of every phase of existence may be observed and studied.
 \usection{The Courtesy Colonies}
 \vs p030 3:1 The seven courtesy colonies sojourn on the architectural spheres for a longer or shorter time while engaged in the furtherance of their missions and in the execution of their special assignments. Their work may be described as follows:
